v1.0.0/modules/schema/pages/class/UnplannedOutage.adoc
= `UnplannedOutage`
:toclevels: 4


+++Document describing the consequence of an unplanned outage in a part of the electrical network. For the purposes of this model, an unplanned outage refers to a state where energy is not delivered; such as, customers out of service, a street light is not served, etc.
A unplanned outage may be created upon:
- impacts the SAIDI calculation
- a breaker trip,
- a fault indicator status change,
- a meter event indicating customer outage,
- a reception of one or more customer trouble calls, or
- an operator command, reflecting information obtained from the field crew.
Outage restoration may be performed using a switching plan which complements the outage information with detailed switching activities, including the relationship to the crew and work.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:UnplannedOutage`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** xref::class/Outage.adoc[`Outage`]
**** *`UnplannedOutage`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
UnplannedOutage {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TroubleTicket {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TroubleOrder {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



FieldDispatchHistory {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Incident {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ServicePointOutageSummary {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Equipment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SwitchAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Fault {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Crew {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConductingEquipment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Incident {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EstimatedRestorationTime {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingPlan {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OutageArea {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Author {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Editor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Approver {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Issuer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




UnplannedOutage -> TroubleTicket: TroubleTicket


UnplannedOutage -> TroubleOrder: TroubleOrder


UnplannedOutage -> FieldDispatchHistory: FieldDispatchHistory


UnplannedOutage -> Incident: Incident


UnplannedOutage -> DateTimeInterval: actualPeriod


UnplannedOutage -> DateTimeInterval: estimatedPeriod


UnplannedOutage -> ServicePointOutageSummary: summary


UnplannedOutage -> UsagePoint: EnergizedUsagePoint


UnplannedOutage -> Equipment: Equipments


UnplannedOutage -> SwitchAction: PlannedSwitchActions


UnplannedOutage -> UsagePoint: DeEnergizedUsagePoint


UnplannedOutage -> Fault: Faults


UnplannedOutage -> Crew: Crew


UnplannedOutage -> ConductingEquipment: OutageIsolationEquipment


UnplannedOutage -> Incident: Incident


UnplannedOutage -> EstimatedRestorationTime: EstimatedRestorationTime


UnplannedOutage -> SwitchingPlan: SwitchingPlans


UnplannedOutage -> OutageArea: OutageArea


UnplannedOutage -> Status: docStatus


UnplannedOutage -> ElectronicAddress: electronicAddress


UnplannedOutage -> Status: status


UnplannedOutage -> ActivityRecord: ActivityRecord


UnplannedOutage -> ConfigurationEvent: ConfigurationEvents


UnplannedOutage -> Author: Author


UnplannedOutage -> Editor: Editor


UnplannedOutage -> Approver: Approver


UnplannedOutage -> Issuer: Issuer


UnplannedOutage -> DiagramObject: DiagramObjects


UnplannedOutage -> InstanceSet: InstanceSet


UnplannedOutage -> Name: Names


UnplannedOutage -> ChangeSetMember: PropertiesCIMDataObject


UnplannedOutage -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<originalCustomersServed,`originalCustomersServed`>>
| 1
| https://w3id.org/linkml/Integer[`integer`]
| +++the total number of customers that are served in the area (both outaged and not outaged).+++

| <<FieldDispatchHistory,`FieldDispatchHistory`>>
| 0..1
| xref::class/FieldDispatchHistory.adoc[`FieldDispatchHistory`]
| +++The dispatch history associated with the unplanned outage+++

| <<cause,`cause`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The cause of this outage.  This is the cause that is used to present to external entities.  That is, the cause is weather, equipment failure, etc.
Note: At present, this is a free string text; it could be replaced with an enumeration in the future.+++

| <<causeKind,`causeKind`>>
| 0..1
| xref::enumeration/OutageCauseKind.adoc[`OutageCauseKind`]
| +++The possible cause that could be associated with this unplanned outage.+++

| <<reportedStartTime,`reportedStartTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The earliest start time of the Outage - as reported by some system or individual+++

| <<Incident,`Incident`>>
| 0..*
| xref::class/Incident.adoc[`Incident`]
| +++The incidents that are associated with the unplanned outage+++

| <<TroubleOrder,`TroubleOrder`>>
| 0..*
| xref::class/TroubleOrder.adoc[`TroubleOrder`]
| +++The trouble order that is associated to the unplanned outage.+++

| <<TroubleTicket,`TroubleTicket`>>
| 0..*
| xref::class/TroubleTicket.adoc[`TroubleTicket`]
| +++The ticket called in by the customer that describes the trouble+++

| <<Approver,`Approver`>>
| 0..1
| xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++

| <<Author,`Author`>>
| 0..1
| xref::class/Author.adoc[`Author`]
| +++Author of this document.+++

| <<Editor,`Editor`>>
| 0..1
| xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++

| <<EstimatedRestorationTime,`EstimatedRestorationTime`>>
| 0..1
| xref::class/EstimatedRestorationTime.adoc[`EstimatedRestorationTime`]
| +++The estimated time that the power will be restored after an outage+++

| <<Issuer,`Issuer`>>
| 0..1
| xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<actualPeriod,`actualPeriod`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Actual outage period; end of the period corresponds to the actual restoration time.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<authorName,`authorName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++

| <<communityDescriptor,`communityDescriptor`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++a name to denote the community - this could be a name or a code of some kind.+++

| <<createdDateTime,`createdDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++

| <<customersRestored,`customersRestored`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++number of customers that have been restored in the area.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<docStatus,`docStatus`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<estimatedPeriod,`estimatedPeriod`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Estimated outage period for a planned outage. The start of the period is the start of the planned outage and the end of the period corresponds to the end of the planned outage.+++

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<metersAffected,`metersAffected`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++The updated number of meters affected by the outage as reported by the OMS within the utility.  It is assumed this number will be updated repeatedly until the full outage is resolved.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<originalMetersAffected,`originalMetersAffected`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++The original number of meters that were affected as reported by the OMS within the utility. That is, this is the total number of meters that were out at the beginning of the outage.+++

| <<outageKind,`outageKind`>>
| 0..1
| xref::enumeration/OutageStatusKind.adoc[`OutageStatusKind`]
| +++Defines if the outage has been verified or is only estimated+++

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

| <<statusKind,`statusKind`>>
| 0..1
| xref::enumeration/CrewStatusKind.adoc[`CrewStatusKind`]
| +++defines the status of the crew as in dispatched or arrived, etc.+++

| <<subject,`subject`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document subject.+++

| <<summary,`summary`>>
| 0..1
| xref::class/ServicePointOutageSummary.adoc[`ServicePointOutageSummary`]
| +++Summary counts of service points (customers) affected by this outage.+++

| <<title,`title`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document title.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<utilityDisclaimer,`utilityDisclaimer`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++This contains an disclaimers the utility would like to place on the data provided to any stakeholder.  This may be different for different stakeholders.  This should possibly be an attribute under the Organization class but it is placed here for now.+++

| <<ActivityRecord,`ActivityRecord`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++

| <<Crew,`Crew`>>
| 0..*
| xref::class/Crew.adoc[`Crew`]
| +++The crew that is assigned to the outage.+++

| <<DeEnergizedUsagePoint,`DeEnergizedUsagePoint`>>
| 0..*
| xref::class/UsagePoint.adoc[`UsagePoint`]
| +++all deenergized useage points associated with the outage.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<EnergizedUsagePoint,`EnergizedUsagePoint`>>
| 0..*
| xref::class/UsagePoint.adoc[`UsagePoint`]
| +++All energized usage points associated with this outage.+++

| <<Equipments,`Equipments`>>
| 0..*
| xref::class/Equipment.adoc[`Equipment`]
| +++All equipments associated with this outage.+++

| <<Faults,`Faults`>>
| 0..*
| xref::class/Fault.adoc[`Fault`]
| +++All faults involved in this outage.+++

| <<Incident,`Incident`>>
| 0..*
| xref::class/Incident.adoc[`Incident`]
| +++Incident reported in trouble call that results in this outage.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OutageArea,`OutageArea`>>
| 0..*
| xref::class/OutageArea.adoc[`OutageArea`]
| +++The outage area where the outage occured.+++

| <<OutageIsolationEquipment,`OutageIsolationEquipment`>>
| 0..*
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]
| +++The equipment that isolates this outage+++

| <<PlannedSwitchActions,`PlannedSwitchActions`>>
| 0..*
| xref::class/SwitchAction.adoc[`SwitchAction`]
| +++All switch actions to apply within the scope of this planned outage. Each such action groups switches to which the action is to apply in order to produce the desired network state considered as outage.+++

| <<SwitchingPlans,`SwitchingPlans`>>
| 0..*
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]
| +++All switching plans that lead to supply restoration due to this outage. Only one will be retained for execution.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#actualPeriod]
=== `actualPeriod`
+++Actual outage period; end of the period corresponds to the actual restoration time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.actualPeriod`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#cause]
=== `cause`
+++The cause of this outage.  This is the cause that is used to present to external entities.  That is, the cause is weather, equipment failure, etc.
Note: At present, this is a free string text; it could be replaced with an enumeration in the future.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.cause`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#causeKind]
=== `causeKind`
+++The possible cause that could be associated with this unplanned outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.causeKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/OutageCauseKind.adoc[`OutageCauseKind`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#communityDescriptor]
=== `communityDescriptor`
+++a name to denote the community - this could be a name or a code of some kind.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.communityDescriptor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Crew]
=== `Crew`
+++The crew that is assigned to the outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Crew`
| Cardinality
| 0..*
| Type
| xref::class/Crew.adoc[`Crew`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#customersRestored]
=== `customersRestored`
+++number of customers that have been restored in the area.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.customersRestored`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#DeEnergizedUsagePoint]
=== `DeEnergizedUsagePoint`
+++all deenergized useage points associated with the outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.DeEnergizedUsagePoint`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#EnergizedUsagePoint]
=== `EnergizedUsagePoint`
+++All energized usage points associated with this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.EnergizedUsagePoint`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#Equipments]
=== `Equipments`
+++All equipments associated with this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Equipments`
| Cardinality
| 0..*
| Type
| xref::class/Equipment.adoc[`Equipment`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#estimatedPeriod]
=== `estimatedPeriod`
+++Estimated outage period for a planned outage. The start of the period is the start of the planned outage and the end of the period corresponds to the end of the planned outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.estimatedPeriod`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#EstimatedRestorationTime]
=== `EstimatedRestorationTime`
+++The estimated time that the power will be restored after an outage+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.EstimatedRestorationTime`
| Cardinality
| 0..1
| Type
| xref::class/EstimatedRestorationTime.adoc[`EstimatedRestorationTime`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#Faults]
=== `Faults`
+++All faults involved in this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Faults`
| Cardinality
| 0..*
| Type
| xref::class/Fault.adoc[`Fault`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#FieldDispatchHistory]
=== `FieldDispatchHistory`
+++The dispatch history associated with the unplanned outage+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.FieldDispatchHistory`
| Cardinality
| 0..1
| Type
| xref::class/FieldDispatchHistory.adoc[`FieldDispatchHistory`]


|===

//[discrete]
[#Incident]
=== `Incident`
+++The incidents that are associated with the unplanned outage+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.Incident`
| Cardinality
| 0..*
| Type
| xref::class/Incident.adoc[`Incident`]


|===

//[discrete]
[#Incident]
=== `Incident`
+++Incident reported in trouble call that results in this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Incident`
| Cardinality
| 0..*
| Type
| xref::class/Incident.adoc[`Incident`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#metersAffected]
=== `metersAffected`
+++The updated number of meters affected by the outage as reported by the OMS within the utility.  It is assumed this number will be updated repeatedly until the full outage is resolved.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.metersAffected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#originalCustomersServed]
=== `originalCustomersServed`
+++the total number of customers that are served in the area (both outaged and not outaged).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.originalCustomersServed`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#originalMetersAffected]
=== `originalMetersAffected`
+++The original number of meters that were affected as reported by the OMS within the utility. That is, this is the total number of meters that were out at the beginning of the outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.originalMetersAffected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#OutageArea]
=== `OutageArea`
+++The outage area where the outage occured.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.OutageArea`
| Cardinality
| 0..*
| Type
| xref::class/OutageArea.adoc[`OutageArea`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#OutageIsolationEquipment]
=== `OutageIsolationEquipment`
+++The equipment that isolates this outage+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.OutageIsolationEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#outageKind]
=== `outageKind`
+++Defines if the outage has been verified or is only estimated+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.outageKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/OutageStatusKind.adoc[`OutageStatusKind`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#PlannedSwitchActions]
=== `PlannedSwitchActions`
+++All switch actions to apply within the scope of this planned outage. Each such action groups switches to which the action is to apply in order to produce the desired network state considered as outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.PlannedSwitchActions`
| Cardinality
| 0..*
| Type
| xref::class/SwitchAction.adoc[`SwitchAction`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#reportedStartTime]
=== `reportedStartTime`
+++The earliest start time of the Outage - as reported by some system or individual+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.reportedStartTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#statusKind]
=== `statusKind`
+++defines the status of the crew as in dispatched or arrived, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.statusKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CrewStatusKind.adoc[`CrewStatusKind`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#subject]
=== `subject`
+++Document subject.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#summary]
=== `summary`
+++Summary counts of service points (customers) affected by this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.summary`
| Cardinality
| 0..1
| Type
| xref::class/ServicePointOutageSummary.adoc[`ServicePointOutageSummary`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#SwitchingPlans]
=== `SwitchingPlans`
+++All switching plans that lead to supply restoration due to this outage. Only one will be retained for execution.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.SwitchingPlans`
| Cardinality
| 0..*
| Type
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#title]
=== `title`
+++Document title.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#TroubleOrder]
=== `TroubleOrder`
+++The trouble order that is associated to the unplanned outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.TroubleOrder`
| Cardinality
| 0..*
| Type
| xref::class/TroubleOrder.adoc[`TroubleOrder`]


|===

//[discrete]
[#TroubleTicket]
=== `TroubleTicket`
+++The ticket called in by the customer that describes the trouble+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.TroubleTicket`
| Cardinality
| 0..*
| Type
| xref::class/TroubleTicket.adoc[`TroubleTicket`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#utilityDisclaimer]
=== `utilityDisclaimer`
+++This contains an disclaimers the utility would like to place on the data provided to any stakeholder.  This may be different for different stakeholders.  This should possibly be an attribute under the Organization class but it is placed here for now.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.utilityDisclaimer`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===


