v1.1.0/modules/schema/pages/class/UnplannedOutage.adoc
= `UnplannedOutage`
:toclevels: 4


+++Document describing the consequence of an unplanned outage in a part of the electrical network. For the purposes of this model, an unplanned outage refers to a state where energy is not delivered; such as, customers out of service, a street light is not served, etc.
A unplanned outage may be created upon:
- impacts the SAIDI calculation
- a breaker trip,
- a fault indicator status change,
- a meter event indicating customer outage,
- a reception of one or more customer trouble calls, or
- an operator command, reflecting information obtained from the field crew.
Outage restoration may be performed using a switching plan which complements the outage information with detailed switching activities, including the relationship to the crew and work.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:UnplannedOutage`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** xref::class/Outage.adoc[`Outage`]
**** *`UnplannedOutage`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<FieldDispatchHistory,`FieldDispatchHistory`>>
//| [[slots_table.FieldDispatchHistory]]<<FieldDispatchHistory,`FieldDispatchHistory`>>
| 0..1 +
xref::class/FieldDispatchHistory.adoc[`FieldDispatchHistory`]
| +++The dispatch history associated with the unplanned outage+++
| _n/a_

| <<Incident,`Incident`>>
//| [[slots_table.Incident]]<<Incident,`Incident`>>
| 0..* +
xref::class/Incident.adoc[`Incident`]
| +++The incidents that are associated with the unplanned outage+++
| _n/a_

| <<TroubleOrder,`TroubleOrder`>>
//| [[slots_table.TroubleOrder]]<<TroubleOrder,`TroubleOrder`>>
| 0..* +
xref::class/TroubleOrder.adoc[`TroubleOrder`]
| +++The trouble order that is associated to the unplanned outage.+++
| _n/a_

| <<TroubleTicket,`TroubleTicket`>>
//| [[slots_table.TroubleTicket]]<<TroubleTicket,`TroubleTicket`>>
| 0..* +
xref::class/TroubleTicket.adoc[`TroubleTicket`]
| +++The ticket called in by the customer that describes the trouble+++
| _n/a_

| <<cause,`cause`>>
//| [[slots_table.cause]]<<cause,`cause`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The cause of this outage.  This is the cause that is used to present to external entities.  That is, the cause is weather,...+++
| _n/a_

| <<causeKind,`causeKind`>>
//| [[slots_table.causeKind]]<<causeKind,`causeKind`>>
| 0..1 +
xref::enumeration/OutageCauseKind.adoc[`OutageCauseKind`]
| +++The possible cause that could be associated with this unplanned outage.+++
| _n/a_

| <<reportedStartTime,`reportedStartTime`>>
//| [[slots_table.reportedStartTime]]<<reportedStartTime,`reportedStartTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The earliest start time of the Outage - as reported by some system or individual+++
| _n/a_

| <<Crew,`Crew`>>
//| [[slots_table.Crew]]<<Crew,`Crew`>>
| 0..* +
xref::class/Crew.adoc[`Crew`]
| +++The crew that is assigned to the outage.+++
| xref::class/Outage.adoc[`Outage`]

| <<DeEnergizedUsagePoint,`DeEnergizedUsagePoint`>>
//| [[slots_table.DeEnergizedUsagePoint]]<<DeEnergizedUsagePoint,`DeEnergizedUsagePoint`>>
| 0..* +
xref::class/UsagePoint.adoc[`UsagePoint`]
| +++all deenergized useage points associated with the outage.+++
| xref::class/Outage.adoc[`Outage`]

| <<EnergizedUsagePoint,`EnergizedUsagePoint`>>
//| [[slots_table.EnergizedUsagePoint]]<<EnergizedUsagePoint,`EnergizedUsagePoint`>>
| 0..* +
xref::class/UsagePoint.adoc[`UsagePoint`]
| +++All energized usage points associated with this outage.+++
| xref::class/Outage.adoc[`Outage`]

| <<Equipments,`Equipments`>>
//| [[slots_table.Equipments]]<<Equipments,`Equipments`>>
| 0..* +
xref::class/Equipment.adoc[`Equipment`]
| +++All equipments associated with this outage.+++
| xref::class/Outage.adoc[`Outage`]

| <<EstimatedRestorationTime,`EstimatedRestorationTime`>>
//| [[slots_table.EstimatedRestorationTime]]<<EstimatedRestorationTime,`EstimatedRestorationTime`>>
| 0..1 +
xref::class/EstimatedRestorationTime.adoc[`EstimatedRestorationTime`]
| +++The estimated time that the power will be restored after an outage+++
| xref::class/Outage.adoc[`Outage`]

| <<Faults,`Faults`>>
//| [[slots_table.Faults]]<<Faults,`Faults`>>
| 0..* +
xref::class/Fault.adoc[`Fault`]
| +++All faults involved in this outage.+++
| xref::class/Outage.adoc[`Outage`]

| <<Incident,`Incident`>>
//| [[slots_table.Incident]]<<Incident,`Incident`>>
| 0..* +
xref::class/Incident.adoc[`Incident`]
| +++Incident reported in trouble call that results in this outage.+++
| xref::class/Outage.adoc[`Outage`]

| <<OutageArea,`OutageArea`>>
//| [[slots_table.OutageArea]]<<OutageArea,`OutageArea`>>
| 0..* +
xref::class/OutageArea.adoc[`OutageArea`]
| +++The outage area where the outage occured.+++
| xref::class/Outage.adoc[`Outage`]

| <<OutageIsolationEquipment,`OutageIsolationEquipment`>>
//| [[slots_table.OutageIsolationEquipment]]<<OutageIsolationEquipment,`OutageIsolationEquipment`>>
| 0..* +
xref::class/ConductingEquipment.adoc[`ConductingEquipment`]
| +++The equipment that isolates this outage+++
| xref::class/Outage.adoc[`Outage`]

| <<PlannedSwitchActions,`PlannedSwitchActions`>>
//| [[slots_table.PlannedSwitchActions]]<<PlannedSwitchActions,`PlannedSwitchActions`>>
| 0..* +
xref::class/SwitchAction.adoc[`SwitchAction`]
| +++All switch actions to apply within the scope of this planned outage. Each such action groups switches to which the action is...+++
| xref::class/Outage.adoc[`Outage`]

| <<SwitchingPlans,`SwitchingPlans`>>
//| [[slots_table.SwitchingPlans]]<<SwitchingPlans,`SwitchingPlans`>>
| 0..* +
xref::class/SwitchingPlan.adoc[`SwitchingPlan`]
| +++All switching plans that lead to supply restoration due to this outage. Only one will be retained for execution.+++
| xref::class/Outage.adoc[`Outage`]

| <<actualPeriod,`actualPeriod`>>
//| [[slots_table.actualPeriod]]<<actualPeriod,`actualPeriod`>>
| 0..1 +
xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Actual outage period; end of the period corresponds to the actual restoration time.+++
| xref::class/Outage.adoc[`Outage`]

| <<communityDescriptor,`communityDescriptor`>>
//| [[slots_table.communityDescriptor]]<<communityDescriptor,`communityDescriptor`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++a name to denote the community - this could be a name or a code of some kind.+++
| xref::class/Outage.adoc[`Outage`]

| <<customersRestored,`customersRestored`>>
//| [[slots_table.customersRestored]]<<customersRestored,`customersRestored`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++number of customers that have been restored in the area.+++
| xref::class/Outage.adoc[`Outage`]

| <<estimatedPeriod,`estimatedPeriod`>>
//| [[slots_table.estimatedPeriod]]<<estimatedPeriod,`estimatedPeriod`>>
| 0..1 +
xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Estimated outage period for a planned outage. The start of the period is the start of the planned outage and the end of the...+++
| xref::class/Outage.adoc[`Outage`]

| <<metersAffected,`metersAffected`>>
//| [[slots_table.metersAffected]]<<metersAffected,`metersAffected`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++The updated number of meters affected by the outage as reported by the OMS within the utility.  It is assumed this number...+++
| xref::class/Outage.adoc[`Outage`]

| <<originalCustomersServed,`originalCustomersServed`>>
//| [[slots_table.originalCustomersServed]]<<originalCustomersServed,`originalCustomersServed`>>
| 1 +
https://w3id.org/linkml/Integer[`integer`]
| +++the total number of customers that are served in the area (both outaged and not outaged).+++
| xref::class/Outage.adoc[`Outage`]

| <<originalMetersAffected,`originalMetersAffected`>>
//| [[slots_table.originalMetersAffected]]<<originalMetersAffected,`originalMetersAffected`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++The original number of meters that were affected as reported by the OMS within the utility. That is, this is the total...+++
| xref::class/Outage.adoc[`Outage`]

| <<outageKind,`outageKind`>>
//| [[slots_table.outageKind]]<<outageKind,`outageKind`>>
| 0..1 +
xref::enumeration/OutageStatusKind.adoc[`OutageStatusKind`]
| +++Defines if the outage has been verified or is only estimated+++
| xref::class/Outage.adoc[`Outage`]

| <<statusKind,`statusKind`>>
//| [[slots_table.statusKind]]<<statusKind,`statusKind`>>
| 0..1 +
xref::enumeration/CrewStatusKind.adoc[`CrewStatusKind`]
| +++defines the status of the crew as in dispatched or arrived, etc.+++
| xref::class/Outage.adoc[`Outage`]

| <<summary,`summary`>>
//| [[slots_table.summary]]<<summary,`summary`>>
| 0..1 +
xref::class/ServicePointOutageSummary.adoc[`ServicePointOutageSummary`]
| +++Summary counts of service points (customers) affected by this outage.+++
| xref::class/Outage.adoc[`Outage`]

| <<utilityDisclaimer,`utilityDisclaimer`>>
//| [[slots_table.utilityDisclaimer]]<<utilityDisclaimer,`utilityDisclaimer`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++This contains an disclaimers the utility would like to place on the data provided to any stakeholder.  This may be different...+++
| xref::class/Outage.adoc[`Outage`]

| <<ActivityRecord,`ActivityRecord`>>
//| [[slots_table.ActivityRecord]]<<ActivityRecord,`ActivityRecord`>>
| 0..* +
xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++
| xref::class/Document.adoc[`Document`]

| <<Approver,`Approver`>>
//| [[slots_table.Approver]]<<Approver,`Approver`>>
| 0..1 +
xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Author,`Author`>>
//| [[slots_table.Author]]<<Author,`Author`>>
| 0..1 +
xref::class/Author.adoc[`Author`]
| +++Author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<ConfigurationEvents,`ConfigurationEvents`>>
//| [[slots_table.ConfigurationEvents]]<<ConfigurationEvents,`ConfigurationEvents`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++
| xref::class/Document.adoc[`Document`]

| <<Editor,`Editor`>>
//| [[slots_table.Editor]]<<Editor,`Editor`>>
| 0..1 +
xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Issuer,`Issuer`>>
//| [[slots_table.Issuer]]<<Issuer,`Issuer`>>
| 0..1 +
xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++
| xref::class/Document.adoc[`Document`]

| <<authorName,`authorName`>>
//| [[slots_table.authorName]]<<authorName,`authorName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<comment,`comment`>>
//| [[slots_table.comment]]<<comment,`comment`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++
| xref::class/Document.adoc[`Document`]

| <<createdDateTime,`createdDateTime`>>
//| [[slots_table.createdDateTime]]<<createdDateTime,`createdDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++
| xref::class/Document.adoc[`Document`]

| <<docStatus,`docStatus`>>
//| [[slots_table.docStatus]]<<docStatus,`docStatus`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status'...+++
| xref::class/Document.adoc[`Document`]

| <<electronicAddress,`electronicAddress`>>
//| [[slots_table.electronicAddress]]<<electronicAddress,`electronicAddress`>>
| 0..1 +
xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++
| xref::class/Document.adoc[`Document`]

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
//| [[slots_table.lastModifiedDateTime]]<<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++
| xref::class/Document.adoc[`Document`]

| <<revisionNumber,`revisionNumber`>>
//| [[slots_table.revisionNumber]]<<revisionNumber,`revisionNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++
| xref::class/Document.adoc[`Document`]

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use...+++
| xref::class/Document.adoc[`Document`]

| <<subject,`subject`>>
//| [[slots_table.subject]]<<subject,`subject`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document subject.+++
| xref::class/Document.adoc[`Document`]

| <<title,`title`>>
//| [[slots_table.title]]<<title,`title`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document title.+++
| xref::class/Document.adoc[`Document`]

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems...+++
| xref::class/Document.adoc[`Document`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ActivityRecord,&#10548;>>
--
////


//[discrete]
[#actualPeriod]
=== `actualPeriod`
+++Actual outage period; end of the period corresponds to the actual restoration time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.actualPeriod`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.actualPeriod,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Approver,&#10548;>>
--
////


//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Author,&#10548;>>
--
////


//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.authorName,&#10548;>>
--
////


//[discrete]
[#cause]
=== `cause`
+++The cause of this outage.  This is the cause that is used to present to external entities.  That is, the cause is weather, equipment failure, etc.
Note: At present, this is a free string text; it could be replaced with an enumeration in the future.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.cause`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.cause,&#10548;>>
--
////


//[discrete]
[#causeKind]
=== `causeKind`
+++The possible cause that could be associated with this unplanned outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.causeKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/OutageCauseKind.adoc[`OutageCauseKind`]


|===

////
[.text-left]
--
<<slots_table.causeKind,&#10548;>>
--
////


//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.comment,&#10548;>>
--
////


//[discrete]
[#communityDescriptor]
=== `communityDescriptor`
+++a name to denote the community - this could be a name or a code of some kind.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.communityDescriptor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.communityDescriptor,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvents,&#10548;>>
--
////


//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.createdDateTime,&#10548;>>
--
////


//[discrete]
[#Crew]
=== `Crew`
+++The crew that is assigned to the outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Crew`
| Cardinality
| 0..*
| Type
| xref::class/Crew.adoc[`Crew`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.Crew,&#10548;>>
--
////


//[discrete]
[#customersRestored]
=== `customersRestored`
+++number of customers that have been restored in the area.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.customersRestored`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.customersRestored,&#10548;>>
--
////


//[discrete]
[#DeEnergizedUsagePoint]
=== `DeEnergizedUsagePoint`
+++all deenergized useage points associated with the outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.DeEnergizedUsagePoint`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.DeEnergizedUsagePoint,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.docStatus,&#10548;>>
--
////


//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Editor,&#10548;>>
--
////


//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.electronicAddress,&#10548;>>
--
////


//[discrete]
[#EnergizedUsagePoint]
=== `EnergizedUsagePoint`
+++All energized usage points associated with this outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.EnergizedUsagePoint`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.EnergizedUsagePoint,&#10548;>>
--
////


//[discrete]
[#Equipments]
=== `Equipments`
+++All equipments associated with this outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Equipments`
| Cardinality
| 0..*
| Type
| xref::class/Equipment.adoc[`Equipment`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.Equipments,&#10548;>>
--
////


//[discrete]
[#estimatedPeriod]
=== `estimatedPeriod`
+++Estimated outage period for a planned outage. The start of the period is the start of the planned outage and the end of the period corresponds to the end of the planned outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.estimatedPeriod`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.estimatedPeriod,&#10548;>>
--
////


//[discrete]
[#EstimatedRestorationTime]
=== `EstimatedRestorationTime`
+++The estimated time that the power will be restored after an outage+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.EstimatedRestorationTime`
| Cardinality
| 0..1
| Type
| xref::class/EstimatedRestorationTime.adoc[`EstimatedRestorationTime`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.EstimatedRestorationTime,&#10548;>>
--
////


//[discrete]
[#Faults]
=== `Faults`
+++All faults involved in this outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Faults`
| Cardinality
| 0..*
| Type
| xref::class/Fault.adoc[`Fault`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.Faults,&#10548;>>
--
////


//[discrete]
[#FieldDispatchHistory]
=== `FieldDispatchHistory`
+++The dispatch history associated with the unplanned outage+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.FieldDispatchHistory`
| Cardinality
| 0..1
| Type
| xref::class/FieldDispatchHistory.adoc[`FieldDispatchHistory`]


|===

////
[.text-left]
--
<<slots_table.FieldDispatchHistory,&#10548;>>
--
////


//[discrete]
[#Incident]
=== `Incident`
+++The incidents that are associated with the unplanned outage+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.Incident`
| Cardinality
| 0..*
| Type
| xref::class/Incident.adoc[`Incident`]


|===

////
[.text-left]
--
<<slots_table.Incident,&#10548;>>
--
////


//[discrete]
[#Incident]
=== `Incident`
+++Incident reported in trouble call that results in this outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Incident`
| Cardinality
| 0..*
| Type
| xref::class/Incident.adoc[`Incident`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.Incident,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Issuer,&#10548;>>
--
////


//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.lastModifiedDateTime,&#10548;>>
--
////


//[discrete]
[#metersAffected]
=== `metersAffected`
+++The updated number of meters affected by the outage as reported by the OMS within the utility.  It is assumed this number will be updated repeatedly until the full outage is resolved.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.metersAffected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.metersAffected,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#originalCustomersServed]
=== `originalCustomersServed`
+++the total number of customers that are served in the area (both outaged and not outaged).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.originalCustomersServed`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.originalCustomersServed,&#10548;>>
--
////


//[discrete]
[#originalMetersAffected]
=== `originalMetersAffected`
+++The original number of meters that were affected as reported by the OMS within the utility. That is, this is the total number of meters that were out at the beginning of the outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.originalMetersAffected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.originalMetersAffected,&#10548;>>
--
////


//[discrete]
[#OutageArea]
=== `OutageArea`
+++The outage area where the outage occured.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.OutageArea`
| Cardinality
| 0..*
| Type
| xref::class/OutageArea.adoc[`OutageArea`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.OutageArea,&#10548;>>
--
////


//[discrete]
[#OutageIsolationEquipment]
=== `OutageIsolationEquipment`
+++The equipment that isolates this outage+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.OutageIsolationEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.OutageIsolationEquipment,&#10548;>>
--
////


//[discrete]
[#outageKind]
=== `outageKind`
+++Defines if the outage has been verified or is only estimated+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.outageKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/OutageStatusKind.adoc[`OutageStatusKind`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.outageKind,&#10548;>>
--
////


//[discrete]
[#PlannedSwitchActions]
=== `PlannedSwitchActions`
+++All switch actions to apply within the scope of this planned outage. Each such action groups switches to which the action is to apply in order to produce the desired network state considered as outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.PlannedSwitchActions`
| Cardinality
| 0..*
| Type
| xref::class/SwitchAction.adoc[`SwitchAction`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.PlannedSwitchActions,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#reportedStartTime]
=== `reportedStartTime`
+++The earliest start time of the Outage - as reported by some system or individual+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.reportedStartTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.reportedStartTime,&#10548;>>
--
////


//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.revisionNumber,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#statusKind]
=== `statusKind`
+++defines the status of the crew as in dispatched or arrived, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.statusKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CrewStatusKind.adoc[`CrewStatusKind`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.statusKind,&#10548;>>
--
////


//[discrete]
[#subject]
=== `subject`
+++Document subject.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.subject,&#10548;>>
--
////


//[discrete]
[#summary]
=== `summary`
+++Summary counts of service points (customers) affected by this outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.summary`
| Cardinality
| 0..1
| Type
| xref::class/ServicePointOutageSummary.adoc[`ServicePointOutageSummary`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.summary,&#10548;>>
--
////


//[discrete]
[#SwitchingPlans]
=== `SwitchingPlans`
+++All switching plans that lead to supply restoration due to this outage. Only one will be retained for execution.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.SwitchingPlans`
| Cardinality
| 0..*
| Type
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.SwitchingPlans,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#title]
=== `title`
+++Document title.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.title,&#10548;>>
--
////


//[discrete]
[#TroubleOrder]
=== `TroubleOrder`
+++The trouble order that is associated to the unplanned outage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.TroubleOrder`
| Cardinality
| 0..*
| Type
| xref::class/TroubleOrder.adoc[`TroubleOrder`]


|===

////
[.text-left]
--
<<slots_table.TroubleOrder,&#10548;>>
--
////


//[discrete]
[#TroubleTicket]
=== `TroubleTicket`
+++The ticket called in by the customer that describes the trouble+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnplannedOutage.TroubleTicket`
| Cardinality
| 0..*
| Type
| xref::class/TroubleTicket.adoc[`TroubleTicket`]


|===

////
[.text-left]
--
<<slots_table.TroubleTicket,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////


//[discrete]
[#utilityDisclaimer]
=== `utilityDisclaimer`
+++This contains an disclaimers the utility would like to place on the data provided to any stakeholder.  This may be different for different stakeholders.  This should possibly be an attribute under the Organization class but it is placed here for now.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.utilityDisclaimer`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Outage.adoc[`Outage`]


|===

////
[.text-left]
--
<<slots_table.utilityDisclaimer,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/FieldDispatchHistory.adoc[`FieldDispatchHistory`] | xref::class/FieldDispatchHistory.adoc#UnplannedOutage[`UnplannedOutage`]



| xref::class/Incident.adoc[`Incident`] | xref::class/Incident.adoc#UnplannedOutage[`UnplannedOutage`]



| xref::class/TroubleOrder.adoc[`TroubleOrder`] | xref::class/TroubleOrder.adoc#UnplannedOutage[`UnplannedOutage`]



| xref::class/TroubleTicket.adoc[`TroubleTicket`] | xref::class/TroubleTicket.adoc#UnplannedOutage[`UnplannedOutage`]


|===

